--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,1 +1,85 @@
+name: Production CI
 
+on:
+  push:
+    branches: [main]
+  pull_request: 
+    branches: [main]
+
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
+jobs:
+  install:
+    name: install 📦
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v3
+      with:
+        fetch-depth: 0
+    - uses: actions/setup-node@v3
+      with:
+        cache: npm
+        node-version: 16
+    - name: Install Dependencies
+      run: npm ci --force
+
+  lint:
+    name: lint 🪅
+    needs: install
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v3
+      with:
+        fetch-depth: 0
+    - uses: actions/setup-node@v3
+      with:
+        cache: npm
+        node-version: 16
+    - name: Install Dependencies
+      run: npm ci --force
+    - name: Lint
+      run: npm run lint
+
+  build:
+    name: build ⚙️
+    needs: install
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v3
+      with:
+        fetch-depth: 0
+    - uses: actions/setup-node@v3
+      with:
+        cache: npm
+        node-version: 16
+    - name: Install Dependencies
+      run: npm ci --force
+    - name: Build Next.js
+      run: npm run build # Aquí usamos next build
+    - uses: actions/upload-artifact@v3
+      with:
+        name: .next
+        path: .next
+
+  deploy:
+    name: deploy 🚀
+    needs: [lint, build]
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v3
+      with:
+        fetch-depth: 0
+    - uses: actions/setup-node@v3
+      with:
+        cache: npm
+        node-version: 16
+    - name: Install Vercel CLI
+      run: npm install --global vercel@latest
+    - name: Pull Vercel Environment Information
+      run: vercel pull --yes --environment=production --token=${{ secrets.VERCEL_TOKEN }}
+    - name: Install Dependencies
+      run: npm ci --force
+    - name: Build and Deploy Next.js to Vercel
+      run: vercel --prod --token=${{ secrets.VERCEL_TOKEN }} --confirm
