--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,7 +21,7 @@ jobs:
     - uses: actions/setup-node@v3
       with:
         cache: npm
-        node-version: 16
+        node-version: 20  # 🔹 Actualizado a una versión compatible con Next.js
     - name: Install Dependencies
       run: npm ci --force
 
@@ -36,7 +36,7 @@ jobs:
     - uses: actions/setup-node@v3
       with:
         cache: npm
-        node-version: 16
+        node-version: 20  # 🔹 Actualizado a una versión compatible con Next.js
     - name: Install Dependencies
       run: npm ci --force
     - name: Lint
@@ -53,12 +53,12 @@ jobs:
     - uses: actions/setup-node@v3
       with:
         cache: npm
-        node-version: 16
+        node-version: 20  # 🔹 Actualizado a una versión compatible con Next.js
     - name: Install Dependencies
       run: npm ci --force
     - name: Build Next.js
-      run: npm run build # Aquí usamos next build
-    - uses: actions/upload-artifact@v3
+      run: npm run build
+    - uses: actions/upload-artifact@v4  # 🔹 Actualizado a la nueva versión
       with:
         name: .next
         path: .next
@@ -74,7 +74,7 @@ jobs:
     - uses: actions/setup-node@v3
       with:
         cache: npm
-        node-version: 16
+        node-version: 20  # 🔹 Actualizado a una versión compatible con Next.js
     - name: Install Vercel CLI
       run: npm install --global vercel@latest
     - name: Pull Vercel Environment Information
