--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
     "recharts": "^2.15.1"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "eslint": "^9",
-    "eslint-config-next": "15.1.7"
+    "eslint": "^9.22.0",
+    "eslint-config-next": "^15.2.1"
   }
 }
