--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,10 +18,10 @@ jobs:
     - uses: actions/checkout@v3
       with:
         fetch-depth: 0
-    - uses: actions/setup-node@v3
+    - uses: actions/setup-node@v4  # 🔹 Cambiado a la versión más nueva
       with:
         cache: npm
-        node-version: 20  # 🔹 Actualizado a una versión compatible con Next.js
+        node-version: 20
     - name: Install Dependencies
       run: npm ci --force
 
@@ -33,12 +33,14 @@ jobs:
     - uses: actions/checkout@v3
       with:
         fetch-depth: 0
-    - uses: actions/setup-node@v3
+    - uses: actions/setup-node@v4
       with:
         cache: npm
-        node-version: 20  # 🔹 Actualizado a una versión compatible con Next.js
+        node-version: 20
     - name: Install Dependencies
       run: npm ci --force
+    - name: Verify ESLint Config  # 🔹 Agregar paso para verificar ESLint
+      run: npx eslint --print-config . | tee eslint-config.json
     - name: Lint
       run: npm run lint
 
@@ -50,10 +52,10 @@ jobs:
     - uses: actions/checkout@v3
       with:
         fetch-depth: 0
-    - uses: actions/setup-node@v3
+    - uses: actions/setup-node@v4
       with:
         cache: npm
-        node-version: 20  # 🔹 Actualizado a una versión compatible con Next.js
+        node-version: 20
     - name: Install Dependencies
       run: npm ci --force
     - name: Build Next.js
@@ -71,10 +73,10 @@ jobs:
     - uses: actions/checkout@v3
       with:
         fetch-depth: 0
-    - uses: actions/setup-node@v3
+    - uses: actions/setup-node@v4
       with:
         cache: npm
-        node-version: 20  # 🔹 Actualizado a una versión compatible con Next.js
+        node-version: 20
     - name: Install Vercel CLI
       run: npm install --global vercel@latest
     - name: Pull Vercel Environment Information
