--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-chessboard": "^4.7.2",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
-    "recharts": "^2.15.1"
+    "recharts": "^2.15.1",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "eslint": "^9.22.0",
