--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-chessboard": "^4.7.2",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-router-dom": "^7.3.0",
     "recharts": "^2.15.1",
     "socket.io-client": "^4.8.1"
   },
