--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.8.4",
     "chess.js": "^1.1.0",
     "framer-motion": "^12.4.10",
     "next": "15.1.7",
